Fix T55573: Mode rotate on local axis crashes